--- a/app/views/comments/_comment_head.html.erb
+++ b/app/views/comments/_comment_head.html.erb
@@ -3,11 +3,12 @@
 	<%= button_to "^", upvote_comment_path(comment) %><%= button_to "v", downvote_comment_path(comment) %> 
 <% end %>
 <strong><%= link_to comment.username, user_path(comment.user) %></strong>
-on <%= comment.created_at.to_s(:mdyt) %><%= " | "%><%= comment.points.to_s + " points" %><%= " | "%>
-<% if object[1] ==  :link %>
-	<%= link_to "link", comment_path(comment) %>
-<% elsif object[1] == :parent %>
-	<%= link_to "parent", @comment.commentable %>
+on <%= comment.created_at.to_s(:mdyt) %><%= " | "%><%= comment.points.to_s + " points" %>
+<% if object.include?(:link) %>
+	<%= " | "%><%= link_to "link", comment_path(comment) %>
+<% end %>
+<% if object.include?(:parent) %>
+	<%= " | "%><%= link_to "parent", comment.commentable %>
 <% end %>
 <% if comment.user_id == current_user.id %>
 	<%= " | "%><%= link_to "edit", edit_comment_path(comment)%><%= " | " %><%= link_to "delete", comment_path(comment), :method => :delete, :confirm => "Are you sure you want to delete this comment?" %>
