--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,5 +13,6 @@ Created: <%= @user.created_at.to_s(:mdy) %><br />
 <% end %>
 <br />
 
-<%= link_to "Submissions" %><br />
-<%= link_to "Comments (I'll get these two later)" %><br /><br />
+<%= link_to "Submissions", articles_path(:by_user => @user) %><br />
+<%= link_to "Comments", comments_path(:by_user => @user) %><br />
+<%= link_to "Upvoted", upvotes_path(@user) %><br /><br />
