pagination on upvoted page, didn't know you could paginate arrays but that's cool

--- a/app/views/users/upvotes.html.erb
+++ b/app/views/users/upvotes.html.erb
@@ -16,6 +16,7 @@
 		<% end %>
 	</tbody>
 </table>
+<%= will_paginate @articles %>
 <% if @articles.empty? %>
   <h4><%= "#{@user.username} has not upvoted any articles yet."%></h4>
 <% end %>
