--- a/app/views/comments/_comment_head.html.erb
+++ b/app/views/comments/_comment_head.html.erb
@@ -10,7 +10,7 @@ on <%= comment.created_at.to_s(:mdyt) %><%= " | "%><%= comment.points.to_s + " p
 <% if object.include?(:parent) %>
 	<%= " | "%><%= link_to "parent", comment.commentable %>
 <% end %>
-<% if comment.user_id == current_user.id %>
+<% if logged_in? && comment.user_id == current_user.id %>
 	<%= " | "%><%= link_to "edit", edit_comment_path(comment)%><%= " | " %><%= link_to "delete", comment_path(comment), :method => :delete, :confirm => "Are you sure you want to delete this comment?" %>
 <% end %><br />
 <%= comment.content %><br /><br />
