a lot of specs added in, controllers cleaned up and comment editing fixed

--- a/app/views/articles/_article_head.html.erb
+++ b/app/views/articles/_article_head.html.erb
@@ -1,9 +1,12 @@
 <% article = object %>
-<h4>
+
 <% if logged_in? && !current_user.voted_on(article) %>
-	<%= button_to "^", upvote_article_path(article) %><%= button_to "v", downvote_article_path(article) %> 
+  <%= button_to "^", upvote_article_path(article) %><%= button_to "v", downvote_article_path(article) %> 
 <% end %>
-<%= link_to article.title, article.link %> <%= "(" + article.short_link + ")" %></h4>
+<h4>
+  <%= link_to article.title, article.link %> <%= "(" + article.short_link + ")" %>
+</h4>
+
 <%= pluralize(article.points, "point") %><%= " by " %> <%= link_to article.username, user_path(article.user) %> <%="posted " + time_ago_in_words(article.created_at) + " ago" %>
 <%= " | " %>
 <%= link_to pluralize(article.comment_count, "comment"), article_path(article) %>
