--- a/app/views/comments/_comment_head.html.erb
+++ b/app/views/comments/_comment_head.html.erb
@@ -1,16 +1,18 @@
 <% comment = object[0] %>
-<% if logged_in? && !current_user.voted_on(comment) %>
-	<%= button_to "^", upvote_comment_path(comment) %><%= button_to "v", downvote_comment_path(comment) %> 
-<% end %>
-<strong><%= link_to comment.username, user_path(comment.user) %></strong>
-on <%= comment.created_at.to_s(:mdyt) %><%= " | "%><%= comment.points.to_s + " points" %>
-<% if object.include?(:link) %>
-	<%= " | "%><%= link_to "link", comment_path(comment) %>
-<% end %>
-<% if object.include?(:parent) %>
-	<%= " | "%><%= link_to "parent", comment.commentable %>
-<% end %>
-<% if logged_in? && comment.user_id == current_user.id %>
-	<%= " | "%><%= link_to "edit", edit_comment_path(comment)%><%= " | " %><%= link_to "delete", comment_path(comment), :method => :delete, :confirm => "Are you sure you want to delete this comment?" %>
-<% end %><br />
-<%= comment.content %><br /><br />
+<comment>
+  <% if logged_in? && !current_user.voted_on(comment) %>
+  	<%= button_to "^", upvote_comment_path(comment) %><%= button_to "v", downvote_comment_path(comment) %> 
+  <% end %>
+  <strong><%= link_to comment.username, user_path(comment.user) %></strong>
+  on <%= comment.created_at.to_s(:mdyt) %><%= " | "%><%= comment.points.to_s + " points" %>
+  <% if object.include?(:link) %>
+  	<%= " | "%><%= link_to "link", comment_path(comment) %>
+  <% end %>
+  <% if object.include?(:parent) %>
+  	<%= " | "%><%= link_to "parent", comment.commentable %>
+  <% end %>
+  <% if logged_in? && comment.user_id == current_user.id %>
+  	<%= " | "%><%= link_to "edit", edit_comment_path(comment)%><%= " | " %><%= link_to "delete", comment_path(comment), :method => :delete, :confirm => "Are you sure you want to delete this comment?" %>
+  <% end %><br />
+  <%= comment.content %><br /><br />
+</comment>
