--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,7 +1,7 @@
 <p class="supertiny">&nbsp;</p>
 <% if logged_in? %>
 	<h3>Add a Comment</h3>
-	<%= render "comments/edit" %><br />
+	<%= render "comments/new" %><br />
 <% else %>
 	To add comments, you must <%= link_to "log in", login_path %>.<br /><br />
 <% end %>
