--- a/app/views/comments/_new.html.erb
+++ b/app/views/comments/_new.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for [@commentable, Comment.new], :html => { :class => 'form-horizontal' } do |f| %>
 	<fieldset>
 		<%= f.input :content %><br /><br />
-      	<%= f.submit "Edit Comment", :class => 'btn btn-primary' %>
+      	<%= f.submit "Add Comment", :class => 'btn btn-primary' %>
   </fieldset>
 <% end %>
