--- a/app/views/articles/_article_head.html.erb
+++ b/app/views/articles/_article_head.html.erb
@@ -1,15 +1,16 @@
 <% article = object %>
+<article>
+  <% if logged_in? && !current_user.voted_on(article) %>
+    <%= button_to "^", upvote_article_path(article) %><%= button_to "v", downvote_article_path(article) %> 
+  <% end %>
+  <h4>
+    <%= link_to article.title, article.link %> <%= "(" + article.short_link + ")" %>
+  </h4>
 
-<% if logged_in? && !current_user.voted_on(article) %>
-  <%= button_to "^", upvote_article_path(article) %><%= button_to "v", downvote_article_path(article) %> 
-<% end %>
-<h4>
-  <%= link_to article.title, article.link %> <%= "(" + article.short_link + ")" %>
-</h4>
-
-<%= pluralize(article.points, "point") %><%= " by " %> <%= link_to article.username, user_path(article.user) %> <%="posted " + time_ago_in_words(article.created_at) + " ago" %>
-<%= " | " %>
-<%= link_to pluralize(article.comment_count, "comment"), article_path(article) %>
-<% if logged_in? && article.user_id == current_user.id %>
-	<%= " | "%><%= link_to "edit", edit_article_path(article)%><%= " | " %><%= link_to "delete", article_path(article), :method => :delete, :confirm => "Are you sure you want to delete this article?" %>
-<% end %><br />
+  <%= pluralize(article.points, "point") %><%= " by " %> <%= link_to article.username, user_path(article.user) %> <%="posted " + time_ago_in_words(article.created_at) + " ago" %>
+  <%= " | " %>
+  <%= link_to pluralize(article.comment_count, "comment"), article_path(article) %>
+  <% if logged_in? && article.user_id == current_user.id %>
+  	<%= " | "%><%= link_to "edit", edit_article_path(article)%><%= " | " %><%= link_to "delete", article_path(article), :method => :delete, :confirm => "Are you sure you want to delete this article?" %>
+  <% end %><br />
+</article>
