--- a/app/views/comments/_comment_head.html.erb
+++ b/app/views/comments/_comment_head.html.erb
@@ -11,7 +11,7 @@
   <% if object.include?(:parent) %>
   	<%= " | "%><%= link_to "parent", comment.commentable %>
   <% end %>
-  <% if logged_in? && comment.user_id == current_user.id %>
+  <% if can? :manage, comment %>
   	<%= " | "%><%= link_to "edit", edit_comment_path(comment)%><%= " | " %><%= link_to "delete", comment_path(comment), :method => :delete, :confirm => "Are you sure you want to delete this comment?" %>
   <% end %><br />
   <%= comment.content %><br /><br />
