5 minute edit/delete window now coded i in User model for less thinking

--- a/app/views/comments/_list.html.erb
+++ b/app/views/comments/_list.html.erb
@@ -3,7 +3,7 @@
 		<%= render "comments/comment_head", :object => [comment, :link] %>
 		<%= link_to "reply", comment_path(comment) %><br /><br />
 		<% if !comment.comments.blank? %>
-			<%= render "comments/list", :object => comment.comments.rev_chronological %>
+			<%= render "comments/list", :object => comment.comments.reverse_chronological %>
 		<% end %>
 	</div>
 <% end %>
