syntax and style and reorganizing again

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,8 @@
  */
 
 
-.btn-group { display: inline; }
+.btn-group { display:inline }
+
+.button { display:inline }
 
 html, head, body title > a { color: #000000; }
