--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,13 +1,9 @@
 Please enter your email address OR username to reset your password.<br /><br />
 
-<%= form_tag password_resets_path, :method => :post do %>
+<%= simple_form_for @password_reset do |f| %>
+  <%= f.full_error :user %>
   <div class="field">
-    <%= label_tag :email %>
-    <%= text_field_tag :email, params[:email] %>
-  </div>
-  <div class="field">
-    <%= label_tag :username %>
-    <%= text_field_tag :username, params[:username] %>
+    <%= f.input :identifier, :label => "Enter your Email or Username" %>
   </div>
   <div class="actions"><%= submit_tag "Reset Password" %></div>
 <% end %>
