--- a/app/views/comments/_comment_head.html.erb
+++ b/app/views/comments/_comment_head.html.erb
@@ -1,7 +1,7 @@
 <% comment = object[0] %>
 <comment>
   <% if can? :vote, comment %>
-  	<%= button_to "^", upvote_comment_path(comment) %><%= button_to "v", downvote_comment_path(comment) %> 
+  	<%= button_to "^", comment_upvote_path(comment) %><%= button_to "v", comment_downvote_path(comment) %> 
   <% end %>
   <strong><%= link_to comment.username, user_path(comment.user) %></strong>
   on <%= comment.created_at.to_s(:mdyt) %><%= " | "%><%= comment.points.to_s + " points" %>
