--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,4 +15,4 @@ Created: <%= @user.created_at.to_s(:mdy) %><br />
 
 <%= link_to "Submissions", articles_path(:by_user => @user) %><br />
 <%= link_to "Comments", comments_path(:by_user => @user) %><br />
-<%= link_to "Upvoted", upvotes_path(@user) %><br /><br />
+<%= link_to "Upvoted", user_upvotes_path(@user) %><br /><br />
