picking dates is now done with its own controller and model

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -13,7 +13,7 @@
   		<li><%= link_to "This Month", articles_path(:this_month => "") %></li>
   		<li><%= link_to "This Year", articles_path(:this_year => "") %></li>
   		<li><%= link_to "Forever", articles_path %></li>
-  		<li><%= link_to "Choose Time", pick_date_path %></li>
+  		<li><%= link_to "Choose Time", new_pick_date_path %></li>
   	</ul>
 </div>
 <div class="btn-group">
